<resources>
    <string name="app_name">Udemy Clone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_a_user_login_here">Already a User? Login Here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account. Register here.</string>
    <string name="logout">Logout</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_course_price">Enter Course Price</string>
    <string name="course_suited_for">Course Suited for</string>
    <string name="course_image_link">Course Image Link</string>
    <string name="enter_course_link">Enter Course Link</string>
    <string name="course_description">Course Description</string>
    <string name="add_course">Add Course</string>
    <string name="add_icon">add icon</string>
    <string name="course_image">Course Image</string>
    <string name="course_hero_image">Course Hero Image</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>