<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity"
    android:background="@color/blueShade1"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@android:color/darker_gray"
        app:hintTextColor="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@android:color/darker_gray"
        app:hintTextColor="@android:color/darker_gray"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@android:color/darker_gray"
        app:hintTextColor="@android:color/darker_gray"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/custom_button_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_a_user_login_here"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_marginBottom="80dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"/>


</LinearLayout>