<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseDetails"
    android:background="@color/blueShade1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/ivCourseImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/course_hero_image" />

        <TextView
            android:id="@+id/tvCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivCourseImage"
            android:textSize="18sp"
            tools:text="Course Title"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:paddingTop="15dp"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCourseTitle"
            android:padding="15dp"
            tools:text="$25"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvSuitedFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Beginner"
            android:layout_below="@id/tvCourseTitle"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tvCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            tools:text="Description"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCourseDescription"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditCourse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blueShade2"
                android:text="@string/edit_course"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteCourse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/blueShade2"
                android:text="@string/delete_course"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>